# rlqshell

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  rlqshell.linux.spec  rlqshell.spec  termplus.spec  todo.txt
.claude/: settings.json  settings.local.json
.gitea/workflows/: release.yml
docs/: build-linux-deb.md  polityka-prywatnosci.md  privacy-policy.md  regulamin.md  rlqshell-spec.md  strategia.md  termplus-spec.md  terms-of-service.md
installer/: License.rtf  RLQShell.wxs  build-deb.sh  build-msi.ps1  fetch-freerdp.ps1
rlqshell/: __init__.py  main.py
rlqshell/app/: application.py  config.py  constants.py
rlqshell/core/: backup_manager.py  connection_pool.py  credential_store.py  database.py  history_manager.py  host_manager.py  keychain.py  known_hosts.py  port_forward_manager.py  snippet_manager.py  snippet_variables.py  tunnel_engine.py  updater.py  vault.py
rlqshell/core/models/: connection.py  credential.py  host.py  port_forward.py  snippet.py  ssh_key.py
rlqshell/core/sync/: auth_server.py  conflict_resolver.py  sync_engine.py  sync_state.py  token_store.py
rlqshell/protocols/: clipboard_bridge.py
rlqshell/protocols/rdp/: __init__.py  connection.py  widget.py
rlqshell/protocols/ssh/: connection.py  monitor.py  sftp_session.py
rlqshell/protocols/vnc/: __init__.py  connection.py  widget.py
rlqshell/resources/: default_config.json
rlqshell/ui/: command_palette.py  main_window.py  splash_screen.py  top_bar.py
rlqshell/ui/connections/: connections_page.py  detached_window.py  session_status_bar.py  split_container.py  split_picker.py  tab_bar.py  terminal_widget.py
rlqshell/ui/dialogs/: change_master_password_dialog.py  device_code_dialog.py  host_key_dialog.py  master_password_dialog.py  paste_confirm_dialog.py  rdp_credentials_dialog.py  recover_vault_dialog.py  recovery_code_dialog.py  rule_editor_dialog.py  snippet_confirm_dialog.py  snippet_target_dialog.py  snippet_variable_dialog.py  update_dialog.py
rlqshell/ui/port_forward/: port_forward_page.py  tunnel_row.py
rlqshell/ui/settings/: about_settings.py  appearance_settings.py  backup_settings.py  clipboard_settings.py  general_settings.py  keybinding_settings.py  settings_dialog.py  sync_settings.py  terminal_settings.py  update_settings.py
rlqshell/ui/sftp/: file_browser.py  sftp_page.py  text_editor.py  transfer_queue.py
rlqshell/ui/themes/: dark.qss  palettes.py  terminal_schemes.json  theme_manager.py
rlqshell/ui/vault/: group_delete_dialog.py  group_editor.py  history_view.py  host_editor.py  host_list.py  identities_view.py  (+9 more)
rlqshell/utils/: crypto.py  logger.py  platform_utils.py
scripts/: diag_rdp_embed.py  ftp_upload.py  generate_release_assets.py
termplus/: __init__.py  main.py
termplus/app/: application.py  config.py  constants.py
termplus/core/: connection_pool.py  credential_store.py  database.py  history_manager.py  host_manager.py  keychain.py  known_hosts.py  port_forward_manager.py  snippet_manager.py  tunnel_engine.py  vault.py
termplus/protocols/: base.py
termplus/resources/: default_config.json
termplus/ui/: command_palette.py  main_window.py  splash_screen.py  top_bar.py
termplus/utils/: crypto.py  logger.py  platform_utils.py
tests/: conftest.py  test_config.py  test_credential_store.py  test_database.py  test_known_hosts.py  test_split_container.py  test_sync.py  test_terminal.py
(+90 files in other folders)
