[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlqshell"
version = "0.2.04"
description = "Modern cross-platform SSH client with private-cloud sync"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "RLQShell Contributors"},
]
keywords = ["ssh", "terminal", "sftp", "rdp", "vnc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]

dependencies = [
    "PySide6>=6.7.0",
    "paramiko>=3.5",
    "cryptography>=43.0",
    "keyring>=25.0",
    "pyte>=0.8",
    "qasync>=0.27",
    "aiofiles>=24.0",
    "appdirs>=1.4",
    "aiohttp>=3.9",
    "msal>=1.28",
    "google-auth>=2.29",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.127",
    "dropbox>=12.0",
]

[project.optional-dependencies]
serial = ["pyserial>=3.5"]
telnet = ["telnetlib3>=2.0"]
vnc = ["Pillow>=10.0"]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
all = ["rlqshell[serial,telnet,vnc,dev]"]

[project.scripts]
rlqshell = "rlqshell.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rlqshell*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
